--- a/reactive.html
+++ b/reactive.html
@@ -1,16 +1,15 @@
 <html>
     <input id="input" type="text" />
-    <div id="span"></div>
+    <div id="text"></div>
 </html>
-<script>
-  // 双向绑定特点：在页面中操作，会改变数据；改变数据，变化会体现在页面中
-  let inputEle = document.getElementById('input')
-  let showEle = document.getElementById('span')
 
-  let obj = {}
-  inputEle.addEventListener('input', (e) => {
-      // 在页面中操作，会改变数据
-      obj.text = e.target.value
+<script>
+  const input = document.getElementById('input')
+  const text = document.getElementById('text')
+
+  const obj = {}
+  input.addEventListener('input', e => {
+    obj.text = e.target.value
   })
   Object.defineProperty(obj, 'text', {
     configurable: true,
@@ -18,13 +17,10 @@
     get: () => {
       console.log('get')
     },
-    set: (newVal) => {
-      // 改变数据，变化会体现在页面中
-      showEle.innerHTML = newVal
-      inputEle.value = newVal
+    set: value => {
+      text.innerHTML = value
     }
   })
 </script>
-
 
 
